--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 
     "require": {
         "php": "^5.5 || ^7.0",
-        "symfony/framework-bundle": "^2.8 || ~3.0",
+        "symfony/framework-bundle": "^2.8 || ~3.0 || ~4.0",
         "auth0/auth0-php": "^5.0.3"
     },
 
